changes in use of z-index fix header appear along delete modal

--- a/src/components/Layout/Header/header.module.css
+++ b/src/components/Layout/Header/header.module.css
@@ -19,7 +19,7 @@
   top: 0;
   box-shadow: var(--shadow);
   background-color: var(--white);
-  z-index: 1000;
+  z-index: 100;
 }
 
 .navLink {
